# aws-sa-tools-mcp-server

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  VECTOR_STORE.md  WORKFLOW.md  apprunner.yaml  aws.py  aws_api.py  ce.py  claude_desktop_config.json  cloudwatch.py  ec2.py  filesystem.py  mypy.ini  pyproject.toml  pytest.ini  rds.py  s3.py  server.py  terraform.py  test_mcp_client_demo.py
.github/workflows/: ci.yml  lint.yml
aws_mcp/: ce.py  cloudwatch.py  ec2.py  filesystem.py  mcp.py  rds.py  s3.py  terraform.py  tools.py
aws_mcp_server/: __init__.py  ce.py  cloudwatch.py  ec2.py  filesystem.py  logging_config.py  mcp.py  rds.py  s3.py  server.py  terraform.py  tools.py
aws_mcp_server/config/: aws_regions.py  settings.py
aws_mcp_server/core/: auth.py  aws_helpers.py  aws_tool.py  base.py  config.py  constants.py  exceptions.py  sso_auth.py  utils.py
aws_mcp_server/services/auth/: __init__.py  sso.py
aws_mcp_server/services/billing/: __init__.py  ce.py
aws_mcp_server/services/compute/: ec2.py
aws_mcp_server/services/database/: __init__.py  rds.py
aws_mcp_server/services/generic/: __init__.py  sdk_wrapper.py
aws_mcp_server/services/knowledge/: __init__.py  document_management.py  generic_pdf_ingestion.py  vector_store.py  vector_store_init.py
aws_mcp_server/services/monitoring/: __init__.py  cloudwatch.py
aws_mcp_server/services/storage/: s3.py
client/: README.md  mcp_json_rpc_client.py
deployment/scripts/: deploy.sh
deployment/terraform/: main.tf  variables.tf
docs/: CLI_USAGE.md
tests/: conftest.py
tests/e2e/: test_mcp_client.py
tests/integration/: test_ec2_service.py  test_s3_service.py  test_s3_simple.py  test_s3_working.py
tests/unit/: test_config_aws_regions.py  test_config_settings.py  test_core_auth.py  test_core_base.py  test_core_exceptions.py  test_core_utils.py  test_logging_config.py  test_server.py  test_services_generic_sdk_wrapper.py
tests/utils/: aws_mocks.py  mcp_helpers.py
